tests/integration/fixtures/laugh/error/인스턴스가_아닌_대상의_필드_접근.laugh
변수 x = "hello";
x.field = 1;
